dashboard-openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-openshift
  labels:
    app: dashboard-openshift
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard-openshift
  template:
    metadata:
      labels:
        app: dashboard-openshift
    spec:
      serviceAccountName: dashboard-sa
      containers:
        - name: dashboard
          image: image-registry.openshift-image-registry.svc:5000/formation-openshift/dashboard-openshift:latest
          ports:
            - containerPort: 8080
