dashboard-openshift/welcome-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: welcome-svc-nodeport
  namespace: paris-user-ns
spec:
  selector:
    app: welcome-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    nodePort: 30080
  type: NodePort
