dashboard-openshift/my-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
  namespace: paris-user-ns
  labels:
    app: my-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-container
        image: docker.io/argoproj/rollouts-demo:blue
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "16Mi"
            cpu: "5m"
          limits:
            memory: "64Mi"
            cpu: "50m"
---
apiVersion: v1
kind: Service
metadata:
  name: my-app-svc
  namespace: paris-user-ns
spec:
  selector:
    app: my-app
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: my-app-route
  namespace: paris-user-ns
spec:
  to:
    kind: Service
    name: my-app-svc
  tls:
    termination: edge
