dashboard-openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: dashboard-route
spec:
  to:
    kind: Service
    name: dashboard-openshift
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
