dashboard-openshift/welcome-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: welcome-route
  namespace: paris-user-ns
spec:
  to:
    kind: Service
    name: welcome-svc
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
